Migrated Execution Model To Support New Structure
The compilation and execution model now support the new instruction
structure. Made changes to possible attributes instructions can have.

(#28 #29 #30)